microservices/service-a/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v2
  labels:
    app: service-a
    owner: sre-team
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-a
      version: v2
  template:
    metadata:
      labels:
        app: service-a
        version: v2
    spec:
      containers:
        - name: service-a
          image: kennethreitz/httpbin      # ✅ changed image
          ports:
            - containerPort: 80           # ✅ httpbin listens on 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
