microservices/service-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
    owner: sre-team
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-a
      owner: sre-team
  template:
    metadata:
      labels:
        app: service-a
        owner: sre-team
        version: v1
      annotations:
        trivy.io/severity: "LOW"
    spec:
      containers:
        - name: service-a
          image: mccutchen/go-httpbin
          ports:
            - containerPort: 8080
          resources:   # ✅ required by Kyverno
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          securityContext:   # ✅ required by Kyverno
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop: ["ALL"]
