microservices/service-a/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-a
  namespace: default
spec:
  host: service-a
  trafficPolicy:
    tls:
      # mode: ISTIO_MUTUAL
      mode: DISABLE
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
