microservices/service-a/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
    - "*"
  gateways:
    - sre-gateway
  http:
    - match:
        - uri:
            prefix: /service-a
      rewrite:
        uri: "/"
      route:
        - destination:
            host: service-a
            subset: v1
            port:
              number: 80
